--- a/app/src/main/res/layout/fragment_add_food_item.xml
+++ b/app/src/main/res/layout/fragment_add_food_item.xml
@@ -73,8 +73,8 @@
         android:layout_width="260dp"
         android:layout_height="49dp"
         android:background="@drawable/orange_gradient_button"
+        android:textColor="@color/white"
         android:text="Add this tasty thing"
-        android:textColor="@color/colorWhite"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
