--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -5,6 +5,6 @@
     android:thickness="5dp"
     android:useLevel="true">
 
-    <solid android:color="@color/fireOrange" />
+    <solid android:color="@color/activityProgressBar" />
 
 </shape>
