--- a/app/src/main/res/drawable/login_field_rounded_button.xml
+++ b/app/src/main/res/drawable/login_field_rounded_button.xml
@@ -2,13 +2,13 @@
     <item>
         <shape>
             <gradient
-                android:angle="360"
-                android:startColor="#4caf50"
-                android:endColor="#00bcd4"
+                android:angle="180"
+                android:startColor="#FF6D00"
+                android:endColor="#FFAB00"
                 android:type="linear" />
             <size android:width="24dp"
                 android:height="24dp"/>
-            <corners android:radius="1000dp"></corners>
+            <corners android:radius="1000dp" />
         </shape>
     </item>
 
@@ -18,8 +18,8 @@
         android:right="2dp"
         android:top="2dp">
         <shape>
-            <corners android:radius="1000dp"></corners>
-            <solid android:color="#fff" />
+            <corners android:radius="1000dp" />
+            <solid android:color="@color/background" />
         </shape>
     </item>
 
