--- a/app/src/main/res/layout/activity_goalbtn_popup.xml
+++ b/app/src/main/res/layout/activity_goalbtn_popup.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:allowUndo="false"
         android:text="Calories left: "
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:allowUndo="false"
         android:text="Steps left: "
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,6 @@
         android:layout_height="50dp"
         android:background="@drawable/rounded_button"
         android:text="RESET TARGET"
-        android:textColor="@color/colorWhite"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +58,7 @@
         android:allowUndo="false"
         android:gravity="center"
         android:text="GOAL"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,7 +75,7 @@
         android:layout_marginTop="68dp"
         android:allowUndo="false"
         android:text="Target Calories to burn: "
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +90,7 @@
         android:layout_height="wrap_content"
         android:allowUndo="false"
         android:text="Target Steps to complete: "
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
