--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/main_nav"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        app:itemBackground="@color/navBarBackgroud"
+        app:itemBackground="@color/navBarBackground"
         app:itemIconTint="@color/nav_item_colors"
         app:itemTextColor="@color/nav_item_colors"
         app:layout_constraintBottom_toBottomOf="parent"
