--- a/app/src/main/res/layout/fragment_add_future_activity.xml
+++ b/app/src/main/res/layout/fragment_add_future_activity.xml
@@ -5,7 +5,8 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.AddFutureActivityFragment">
+    tools:context=".fragments.AddFutureActivityFragment"
+    android:background="@color/background">
 
     <Spinner
         android:id="@+id/activitySpinner2"
@@ -86,7 +87,6 @@
         android:id="@+id/textView5"
         android:layout_width="165dp"
         android:layout_height="23dp"
-        android:background="@color/colorWhite"
         android:gravity="center"
         android:text="Add Future Activity"
         android:textAllCaps="true"
