--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="56dp"
-    android:background="@color/colorWhite"
+    android:background="@color/background"
     tools:context=".fragments.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -17,7 +17,7 @@
         android:layout_marginTop="32dp"
         android:background="@drawable/orange_gradient_button"
         android:text="Goals"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,14 +25,13 @@
 
     <Button
         android:id="@+id/logoutBtn"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/rounded_button"
-        android:text="Log-out"
-        android:textColor="@color/colorWhite"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/logout"
+        android:backgroundTint="@color/textGray"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,25 +76,27 @@
 
     <TextView
         android:id="@+id/setFoodItem"
-        android:layout_width="45dp"
-        android:layout_height="42dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="@drawable/outline_last_page_black_24dp"
+        android:backgroundTint="@color/textLight"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.946"
-        app:layout_constraintStart_toEndOf="@+id/setFutureActivity"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/setFutureActivity"
-        android:layout_width="50dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="@drawable/outline_first_page_black_24dp"
+        android:backgroundTint="@color/textLight"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -104,6 +105,7 @@
         android:layout_width="130dp"
         android:layout_height="28dp"
         android:layout_marginTop="31dp"
+        android:spinnerMode="dialog"
         android:background="@drawable/orange_gradient_outline_button"
         android:gravity="center_horizontal"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
