--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -3,35 +3,32 @@
     android:id="@+id/parent_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorWhite"
+    android:background="@color/background"
     android:padding="15dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/img_size"
+        android:layout_height="@dimen/img_size"
         android:src='@mipmap/ic_launcher' />
 
     <TextView
         android:id="@+id/image_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/image"
         android:text="TestingPosition"
-        android:textColor="@color/fireOrange"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        style="@style/TextAppearance.AppCompat.Headline.2"/>
 
     <TextView
         android:id="@+id/image_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/image_name"
-        android:layout_marginLeft="30dp"
+        android:layout_below="@+id/image_name"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/image"
         android:text="Date: xx.xx.xx"
-        android:textColor="@color/fireOrange"
-        android:textStyle="bold" />
+        style="@style/TextAppearance.AppCompat.Headline.3"/>
 </RelativeLayout>
