--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="img_size">60dp</dimen>
+
+    <dimen name="recycler_view_height">570dp</dimen>
+    <dimen name="reycler_view_width">380dp</dimen>
 </resources>
