--- a/app/src/main/res/layout/fragment_food_history.xml
+++ b/app/src/main/res/layout/fragment_food_history.xml
@@ -111,21 +111,21 @@
                     android:text="0" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/txtcarbs"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="0" />
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/txtfat"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="0" />
 
                 <TextView
-                    android:id="@+id/textView11"
+                    android:id="@+id/txtcal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
